--- a/_data/topics/01-canvas-apps.yaml
+++ b/_data/topics/01-canvas-apps.yaml
@@ -4,6 +4,7 @@ name: Canvas apps
 shortname: Canvas apps
 parent: Power Apps
 keywords:
+  - canvas app
   - canvas apps
 hashtags:
   - "#CanvasApps"
