--- a/_data/topics/02-model-driven-apps.yaml
+++ b/_data/topics/02-model-driven-apps.yaml
@@ -5,6 +5,9 @@ shortname: Model-driven apps
 parent: Power Apps
 keywords:
   - model-driven apps
+  - model-driven apps
+  - model driven apps
+  - model driven app
 hashtags:
   - "#ModelDrivenApps"
 services:
