--- a/_data/topics/03-common-data-service.yaml
+++ b/_data/topics/03-common-data-service.yaml
@@ -4,7 +4,7 @@ name: Common Data Service
 shortname: CDS
 parent: Power Apps
 keywords:
-  - Common Data Service
+  - common data service
 hashtags:
   - "#CommonDataService"
 services:
