--- a/_data/topics/05-teams-integration.yaml
+++ b/_data/topics/05-teams-integration.yaml
@@ -4,6 +4,8 @@ name: Teams integration
 parent: Power Apps
 keywords:
   - microsoft teams
+  - teams
+  - msteams
 hashtags:
   - "#MSTeams #MicrosoftTeams"
 services:
